# Distributed_category_specific_liu_et_al_plosbio

./: .gitignore  README.md  pyproject.toml
data/: NFA_Yeo_sphere_6-52_-47_-18.nii  VWFA_Lang_etal_sphere_6_45_-57_-12.nii  leftVTOC_rsa_nonconcat_-6_k0.nii  rightVTOC_rsa_nonconcat_-6_k0.nii
scripts/: forward_meta_analysis.py  reading_arithmetic.py  reverse_meta_analysis.py
