[project]
name = "liu-et-al"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">3.9,<3.11"
dependencies = [
    "matplotlib<3.6",
    "neurolang>=0.1a19",
    "nilearn<0.10",
    "numpy<2.0",
    "b2rio @ git+https://github.com/NeuroLang/B2RIO.git@master",
    "pip>=25.1.1",
    "setuptools>=80.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools.package-data]
"*" = ["*.csv", "*.nii"]
